--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <button id="convertBtn">Convert</button>
 
-    <div class="result" >Hello world</div>
+    <div class="result" id="result" ></div>
 </div>
 
 <script src="converter.js"></script>
